[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/player/projeteis.gd" type="Script" id=1]
[ext_resource path="res://sprites/efeitos_jogo/2DLight.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/gun/caveira6.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/gun/bola-energia4.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/gun/bola-energia1.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/gun/caveira7.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/gun/dino_skull1.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/gun/caveira5.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/gun/bola-energia2.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/gun/caveira3.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/gun/caveira8.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/gun/caveira1.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/gun/caveira4.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/gun/caveira2.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/gun/bola-energia3.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/gun/nova_caveira4.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/gun/nova_caveira2.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/gun/nova_caveira1.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/gun/nova_caveira3.png" type="Texture" id=19]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/shader/magic_single_tex.shader" type="Shader" id=20]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/textures/magic_masks/particle_cross.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/gun/dino_skull2.png" type="Texture" id=22]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/Heal.tres" type="Material" id=23]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/textures/circular_mask.png" type="Texture" id=24]
[ext_resource path="res://sprites/player/gun/caveira9.png" type="Texture" id=25]
[ext_resource path="res://sprites/player/gun/caveira10.png" type="Texture" id=26]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 10.0644

[sub_resource type="Animation" id=3]
resource_name = "escala_tiro"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.27, 0.27 ) ]
}

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.0261364 ), 0.0, 2.46443, 0, 0, Vector2( 0.990385, 0.0897727 ), 0.263636, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.00671141, 0.311475, 1 )
colors = PoolColorArray( 0, 0.0852661, 0.992188, 1, 0.0904541, 0.317482, 0.609375, 1, 0, 0.25, 1, 1 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 20 )
shader_param/emission_intensity = 1.5
shader_param/texture_mask = ExtResource( 21 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.115909 ), 0.0, 0.677922, 0, 0, Vector2( 0.322115, 0.0363636 ), -0.73514, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.204918, 0.770492, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.0267191, 0.0151062, 0.386719, 1, 0.177856, 0.245824, 0.96875, 1, 1, 1, 1, 0 )

[node name="laser_ship" type="Area2D"]
scale = Vector2( 0.8, -0.8 )
z_index = -2
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -3.8332, 3.60312 ],
"_edit_vertical_guides_": [ 19.25, -5.23801, 5.07461 ]
}

[node name="neon" type="Sprite" parent="."]
visible = false
modulate = Color( 0.909804, 0.0823529, 0.0823529, 0.415686 )
self_modulate = Color( 1, 1, 1, 0.733333 )
material = SubResource( 4 )
position = Vector2( -1.25, 0 )
scale = Vector2( 0.09, 0.13 )
z_index = -2
texture = ExtResource( 2 )

[node name="dino_caveira" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
playing = true

[node name="nova_caveira" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="sprite_caveira" type="AnimatedSprite" parent="."]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 6 )
frame = 4
playing = true
flip_h = true

[node name="sprite" type="AnimatedSprite" parent="."]
visible = false
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
z_index = -5
frames = SubResource( 1 )
frame = 3
playing = true

[node name="neon2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.164706, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.733333 )
material = SubResource( 4 )
position = Vector2( 0, 1.25 )
scale = Vector2( 0.0679834, 0.0634766 )
z_index = -3
texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 1.1 )
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/escala_tiro = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -3.12501, 3.125 )
scale = Vector2( 0.577799, 0.284831 )
texture = ExtResource( 2 )
texture_scale = 0.3
color = Color( 0.564706, 0.74902, 0.909804, 1 )
energy = 3.0

[node name="particulas" type="Node2D" parent="."]
position = Vector2( -3.75, 2.5 )
z_index = -1

[node name="Heal2D" type="CPUParticles2D" parent="particulas"]
material = ExtResource( 23 )
position = Vector2( 3.75, -5 )
amount = 13
lifetime = 0.08
speed_scale = 0.5
randomness = 0.1
local_coords = false
draw_order = 1
texture = ExtResource( 24 )
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( 0, 1 )
spread = 100.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
linear_accel = 40.0
angle = 75.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 9 )
color_ramp = SubResource( 10 )

[node name="Cross2D" type="CPUParticles2D" parent="particulas/Heal2D"]
material = SubResource( 11 )
amount = 7
lifetime = 0.3
speed_scale = 0.3
randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 21 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, 0 )
spread = 50.0
gravity = Vector2( 0, -300 )
initial_velocity = 60.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.1
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )

[connection signal="body_entered" from="." to="." method="_on_laser_ship_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_laser_ship_enemy_entered"]
